--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <div class="text">
             <h1 id="bigtext">Welcome to Restaurant Hemel en Aarde!</h1>
             <h3> A website made by: Lisenka Velderman </h3>
+                <h3> Edited by: Daphne Sieffers - 172703 </h3>
             <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. </p>
                 <p><a href="https://www.buas.nl/">Click here to see more!</a></p>
